# learn-vulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile.sh  lve  main.c  premake5.lua  run.sh
cmake/: glfw3Targets-none.cmake  glfw3Targets.cmake
include/lve/: first_app.h  pipeline.h  window.h
include/lvk/: device.hpp  instance.hpp  physical_device.hpp  queue.hpp
shaders/: simple_shader.frag  simple_shader.vert
src/: device.cpp  first_app.c  instance.cpp  main.c  main.cpp  physical_device.cpp  pipeline.c  queue.cpp  window.c
